feat: initial implementation for GET(siwf) endpoint
